<resources>
    <string name="app_name">AppUsuario</string>
    <string name="app_criptomoeda">App Usuario</string>
    <string name="bot_o_criar">Botão Criar</string>
    <string name="id">id</string>
    <string name="nome">Nome</string>
    <string name="descri_o">Descrição</string>
    <string name="salvar">Salvar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
</resources>